--- a/src/FM/SearchBundle/Resources/views/DataCollector/solarium.html.twig
+++ b/src/FM/SearchBundle/Resources/views/DataCollector/solarium.html.twig
@@ -41,7 +41,7 @@
         <ul class="alt">
         {% for i, query in collector.queries %}
             <li>
-                <h2>Request {{ loop.index }} (<a href="{{ query.uri }}">{{ query.base }}</a>)</h2>
+                <h2>Request {{ loop.index }} (<a href="{{ query.request.uri }}">{{ query.request.handler }}</a>)</h2>
                 <div>
                     <h3>Params</h3>
                     {#
